@@ -452,12 +452,14 @@
     "ehi_buffs_perks_hacker_desc" : "Zobrazuje buffy a jejich dobu trvání v perku Hacker",
     "ehi_buffs_perks_leech" : "Leech",
     "ehi_buffs_perks_leech_desc" : "Zobrazuje buffy a jejich dobu trvání v perku Leech",
+    "ehi_buffs_perks_copycat" : "Copycat",
+    "ehi_buffs_perks_copycat_desc" : "Zobrazuje buffy a jejich dobu trvání v perku Copycat",
 
     "ehi_buffs_other_menu" : "Ostatní",
     "ehi_buffs_other_interact" : "Interakce",
     "ehi_buffs_other_reload" : "Nabití zbraně",
     "ehi_buffs_other_melee_charge" : "Prodleva nabití melee",
-    "ehi_buffs_other_shield_regen" : "Prodleva na obnovení zbroje",
+    "ehi_buffs_other_shield_regen" : "Prodleva na obnovení armoru",
     "ehi_buffs_other_stamina" : "Výdrž",
     "ehi_buffs_other_dodge" : "Šance na Dodge",
     "ehi_buffs_other_dodge_refresh" : "Aktualizace šance na Dodge",
