@@ -452,6 +452,8 @@
     "ehi_buffs_perks_hacker_desc" : "Shows buffs and cooldowns in Hacker perk deck",
     "ehi_buffs_perks_leech" : "Leech",
     "ehi_buffs_perks_leech_desc" : "Shows buffs and cooldowns in Leech perk deck",
+    "ehi_buffs_perks_copycat" : "Copycat",
+    "ehi_buffs_perks_copycat_desc" : "Shows buffs and cooldowns in Copycat perk deck",
 
     "ehi_buffs_other_menu" : "Other",
     "ehi_buffs_other_interact" : "Interact",
